# director-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
desktop/: main.js  package-lock.json  package.json  preload.js
docs/: ARCHITECTURE.md  BUILD.md  ROADMAP.md
examples/: sample_canon_work.json
packaging/: backend_entry.py  build_backend.sh  build_standalone.sh
soul/static/: core.md
src/director_bot/: __init__.py  cli.py  config.py  envload.py  pipeline.py
src/director_bot/adapters/: __init__.py  lightwriter.py  script2screen.py  scripty.py
src/director_bot/canon/: __init__.py  db.py  embed.py  import_export.py  index.py  query.py  seed.py  seed_extra.py  seed_scale.py
src/director_bot/contracts/: __init__.py  schemas.py
src/director_bot/decisions/: __init__.py  agreement.py  engine.py  equilibrium.py  ledger.py  override.py
src/director_bot/project/: __init__.py  arc.py  workspace.py
src/director_bot/server/: __init__.py  app.py
src/director_bot/server/static/: app.js  index.html  style.css
src/director_bot/soul/: __init__.py  brain.py  loader.py  memory.py  processes.py  steps.py  trace.py
src/director_bot/soul/static/: process_notes.md  taste.md
tests/: conftest.py  test_adapters.py  test_agreement.py  test_arc.py  test_brain.py  test_canon_db.py  test_cards_and_traces.py  test_cli.py  test_contracts.py  test_embed.py  test_engine.py  test_envload.py  test_equilibrium.py  test_ledger.py  test_override.py  test_pipeline.py  test_server.py  test_soul.py  test_stream_persist.py  test_trace.py  test_workspace.py
