[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "director-bot"
version = "0.1.0"
description = "Embodied AI film director: canon DB, soul, decision ledger, tool orchestration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Optional: talk to a local Scripty install for live export
scripty = []

[project.scripts]
director-bot = "director_bot.cli:main"
dbot = "director_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
director_bot = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
