[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "director-bot"
version = "0.2.0"
description = "Embodied AI film director: canon DB, soul, decision ledger, tool orchestration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
anthropic = ["anthropic>=0.40"]
# OpenAI / xAI use stdlib urllib — no extra dep required
all = ["anthropic>=0.40"]

[project.scripts]
director-bot = "director_bot.cli:main"
dbot = "director_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
director_bot = ["py.typed", "soul/static/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
