[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "director-bot"
version = "0.3.0"
description = "Embodied AI film director: canon DB, soul, decision ledger, tool orchestration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]
anthropic = ["anthropic>=0.40"]
# OpenAI / xAI use stdlib urllib — no extra dep required
all = ["anthropic>=0.40", "fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]

[project.scripts]
director-bot = "director_bot.cli:main"
dbot = "director_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
director_bot = ["py.typed", "soul/static/*.md", "server/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
